Audit the shop for allocation, disk writes and dead code
Nine findings from a read-through of everything the shop added. Nothing
here changes behaviour except the two marked as fixes.

Derived views were rebuilt at every call site. byId() built a 165-entry
map and pages() rebuilt the whole page list, and between them they ran
twice per click in the shop, once per tab-completion keystroke, and once
per chat listing. The catalogue only changes when the manager reloads
it, so both are computed once there and handed out. The catalogue and
its two views are swapped behind a single reference, so a reload cannot
be observed half-applied.

FIX: an unlimited entry spent points with nothing forcing them to disk.
Points and purchase tallies share a SavedData, and only the tally write
flushed -- so buying something unlimited, logging out and crashing before
the next autosave returned the points and kept the item. settle() now
flushes once, after both writes, for every purchase. That also removes
the second flush a limited purchase was paying for.

The screen allocated an ItemStack per cell per frame: sixty-four objects
sixty times a second for a page that only changes when the server sends
one. Stacks, the trimmed heading and balance strings, and the tooltip
lines are all built when a page arrives or the cursor changes cell. The
reveal screen already worked this way; the shop now matches it.

The portrait cache allocated too -- a Quaternionf per Pokemon cell per
frame to rotate by nothing, and a composed "species#shiny" key per
lookup. The rotation is a shared identity constant and there are two
maps instead of one composed key, with an UNRESOLVABLE marker in place
of a separate missing-set. Nothing on that path allocates now.

windowOf went through OffsetDateTime and LocalDate to reach a number
that is a division, once per cell per page send. It is floorDiv now, and
ShopResetPeriodTest holds the two to the same answer hour by hour across
five years, either side of a leap day, 